--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,11 +4,18 @@
   <% @users.each do |user| %>
     <li>
       <%= user.username %>
-      <%= link_to 'user\'s profile', user_profile_path(user) %>
+      <%= link_to 'user\'s profile', user_profile_path(user.id, user.profile.id) %>
       <%= link_to 'see user\'s posts', user_path(user) %>
+      <%= link_to 'Delete user', user_path(user), 
+                   method: :delete, data: { confirmation: 'Are you sure?' } %>
     </li>
   <% end %>
-</ul>
+</ul><br><br>
+
+<% @posts.each do |post| %>
+  <h5><%= post.title %></h5>
+  <p><%= post.body %></p>
+<% end %><br><br>
 
 <%= form_with model: @user, url: '/users' do |form| %>
   <%= form.label :username, 'New user: ' %>
