--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,20 @@
 <h2>List of Users</h2>
 
-<ul>
-  <% @users.each do |user| %>
-    <li>
-      <%= user.username %>
-      <%= link_to 'user\'s profile', user_profile_path(user.id, user.profile.id) %>
-      <%= link_to 'see user\'s posts', user_path(user) %>
-      <%= link_to 'Delete user', user_path(user), 
-                   method: :delete, data: { confirmation: 'Are you sure?' } %>
-    </li>
-  <% end %>
-</ul><br><br>
+<% if @users.empty? %>
+  <h3>There are no registered users.</h3>
+<% else %>
+  <ul>
+    <% @users.each do |user| %>
+      <li>
+        <%= user.username %>
+        <%= link_to 'user\'s profile', user_profile_path(user.id, user.profile.id) %>
+        <%= link_to 'see user\'s posts', user_path(user) %>
+        <%= link_to 'Delete user', user_path(user), 
+                    method: :delete, data: { confirmation: 'Are you sure?' } %>
+      </li>
+    <% end %>
+  </ul><br><br>
+<% end %>
 
 <% @posts.each do |post| %>
   <h5><%= post.title %></h5>
