Add bcrypt password

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,10 +27,10 @@
 
 
   <%= form.label :password, 'Password: '%>
-  <%= form.text_field :password %><br><br>
+  <%= form.password_field 'user[password]' %><br><br>
 
   <%= form.label :password_confirmation, 'Confirm password: ' %>
-  <%= form.text_field :password_confirmation %><br><br>
+  <%= form.password_field 'user[password_confirmation]' %><br><br>
 
   <%= form.submit %>
 <% end %>
