--- a/app/views/users/_users_list.html.erb
+++ b/app/views/users/_users_list.html.erb
@@ -9,8 +9,10 @@
         <%= user.username %>
         <%= link_to 'user\'s profile', user_profile_path(user.id, user.profile.id) %>
         <%= link_to 'see user\'s posts', user_path(user) %>
-        <%= link_to 'Delete user', user_path(user), 
-                    method: :delete, data: { confirmation: 'Are you sure?' } %>
+        <% if @current_user && user.id == @current_user.id %>
+          <%= link_to 'Delete user', user_path(user), 
+                       method: :delete, data: { confirmation: 'Are you sure?' } %>
+        <% end %>
       </li>
     <% end %>
   </ul><br><br>
