--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,4 +10,13 @@
   <%= form.password_field 'user[password_confirmation]' %><br><br>
 
   <%= form.submit %>
+
+  <% if !!@current_user %>
+    <h3>
+      Logged in as: <%=@current_user.username %>
+      <%= link_to 'Log out', logout_path %>
+    </h3>
+  <% else %>
+    <%= link_to 'Log in', login_path %>
+  <% end %>
 <% end %>
