--- a/app/views/users/_posts_list.html.erb
+++ b/app/views/users/_posts_list.html.erb
@@ -3,6 +3,11 @@
 <% else %>
   <% @posts.each do |post| %>
     <h5><%= post.title %></h5>
+
+    <% if @current_user %>
+      <h6><%= post.user_id %></h6>
+    <% end %>
+
     <p><%= post.body %></p>
   <% end %><br><br>
 <% end %><br><br>
